--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="menu-container">
         <button class="menu-button">☰</button>
         <div class="menu-options">
-            <a href="#intro.html">Intro</a>
+            <a href="https://github.com/Anes1818/mixinormal4ever.github.io/blob/main/intro.html">Intro</a>
             <a href="#memo-hub.html">Memories-hub</a>
             <a href="#">I love you(:</a>
         </div>
