--- a/intro.html
+++ b/intro.html
@@ -31,9 +31,9 @@
  <div class="menu-container">
         <button class="menu-button">☰</button>
         <div class="menu-options">
-            <a href="#intro">Intro</a>
-            <a href="#section2">Memories-hub</a>
-            <a href="#section3">I love you(:</a>
+            <a href="intro.html">Intro</a>
+            <a href="memo-hub.html">Memories-hub</a>
+            <a href="#se">I love you(:</a>
         </div>
     </div>
     <div class="video-container">
