--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Khduja-Anes</title>
     <link rel="stylesheet" href="MichiNormal4ever.css">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+VIC+Guides&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+VIC+Guides&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="banner">
@@ -18,7 +19,7 @@
     </main> 
     <div class="divider">
             <div class="middle-section">
-                <button class="creative-button">next(:</button>
+                <button onclick="window.location.href='intro.html'" class="creative-button">next(:</button>
             </div>
     </div>       
      <div class="sticker-wrapper">
@@ -53,7 +54,7 @@
         <div class="menu-options">
             <a href="intro.html">Intro</a>
             <a href="memo-hub.html">Memories-hub</a>
-            <a href="#">I love you(:</a>
+            <a href="https://youtu.be/sNufvO2NGPI?feature=shared">I love you(:</a>
         </div>
     </div>
     <div class="lard">
@@ -67,7 +68,7 @@
           </div>
           <div class="image-box">
             <img src="https://i.postimg.cc/k4X9mcPT/20231223-080744.jpg" alt="1" class="image">
-            <div class="text"> MONTHS~15</div>
+            <div class="text">~FIFTEEN MONTHS</div>
           </div>
           <div class="image-box">
             <img src="https://i.postimg.cc/4dx34ZTk/202403251259500.jpg" alt="Image 3" class="image">
@@ -94,7 +95,7 @@
     </div> 
 <footer><header class="waves"> <!-- ahh yalwehraniya-->
   <h1 class="batata2" >we fi 3ech9ek rani ghare9 netnefes corage</h1></footer>
-  <p>all right reserved 2025 lmao</p>
+  <p>all right reserved 2025© lmao</p>
   <a href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
 
 </body>
