--- a/intro.html
+++ b/intro.html
@@ -6,13 +6,19 @@
     <title>intro.K-A</title>
     <link rel="stylesheet" href="MichiNormal4ever.css">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+VIC+Guides&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+<link rel="shortcut icon" href="path_to_your_icon/favicon.ico" type="image/x-icon">
 </head>
 <body class="body2"> <header class="banner">
         <h1 class="batata" >INTRO</h1>
    </header>
  </header> 
- 
+ <div class="divider">
+    <div class="middle-section">
+        <button onclick="window.location.href='memo-hub.html'" class="creative-button">next(:</button>
+    </div>
+        
 </div>       
  <div class="star-stickers2">
     <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="star1." class="star-stickers star10">
@@ -31,14 +37,14 @@
  <div class="menu-container">
         <button class="menu-button">☰</button>
         <div class="menu-options">
-            <a href="intro.html">Intro</a>
-            <a href="memo-hub.html">Memories-hub</a>
-            <a href="#se">I love you(:</a>
+            <a href="#intro">Intro</a>
+            <a href="#section2">Memories-hub</a>
+            <a href="#section3">I love you(:</a>
         </div>
     </div>
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+            src="https://www.youtube.com/embed/sNufvO2NGPI" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
         </iframe>
@@ -46,7 +52,7 @@
 </body>
  <footer class="footer1">
     <h1 class="batata22" >ntiya 3omri(:</h1>
-    <p class="batata22">all right reserved 2025 lmao</p>
+    <p class="batata22">all right reserved 2025© lmao</p>
     <a class="batata22" href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
  </footer>
 
