--- a/memo-hub.html
+++ b/memo-hub.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>memo-hub</title>
   <link rel="stylesheet" href="MichiNormal4ever.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+VIC+Guides&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="body3">
  
@@ -93,7 +95,7 @@
 </body>
    <footer class="footer1">
         <h1 class="batata22" >ntiya 3omri(:</h1>
-        <p class="batata22">all right reserved 2025 lmao</p>
+        <p class="batata22">all right reserved 2025© lmao</p>
         <a class="batata22" href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
   
     </footer>
