--- a/intro.html
+++ b/intro.html
@@ -51,7 +51,7 @@
     </div>
 </body>
  <footer class="footer1">
-    <h1 class="batata22" >ntiya 3omri(:</h1>
+    <h1 class="batata22" >the vid is private and plz set high quality</h1>
     <p class="batata22">all right reserved 2025© lmao</p>
     <a class="batata22" href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
  </footer>
