--- a/memo-hub.html
+++ b/memo-hub.html
@@ -71,12 +71,12 @@
         <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="Star" class="star-khadija">
         
         <!-- the screet -->
-        <!-- النجمة القابلة للنقر -->
+        <!-- اdont sheatttt -->
 <a href="#imageModal">
     <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="Clickable Star" class="star-khadija clickable-khadija">
   </a>
   
-  <!-- الصورة التي ستظهر عند النقر -->
+  <!-- my poem-->
   <div id="imageModal" class="modal">
     <a href="#" class="close">&times;</a>
     <img class="modal-content" src="https://i.postimg.cc/YStNHggq/Red-and-Black-Killer-Pop-Culture-Inspired-Image-BG-Halloween-Virtual-Backgr-20241228-115421-0000.png">
@@ -84,9 +84,9 @@
   <div class="menu-container">
     <button class="menu-button">☰</button>
     <div class="menu-options">
-        <a href="#intro.html">Intro</a>
-        <a href="#section2">Memories-hub</a>
-        <a href="#section3">I love you(:</a>
+        <a href="intro.html">Intro</a>
+        <a href="memo-hub.html">Memories-hub</a>
+        <a href="index.html">I love you(:</a>
     </div>
 </div>
     </body>
