--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         </div>
     </div>
     <div class="lard">
-    <img src="https://i.postimg.cc/6qbt1j5x/giphy.gif" alt="anes" class="cat-sticker" style="left: 0%;">
-    <img src="https://i.postimg.cc/KjfRcDG0/pixel-art-kitty.gif" alt="khadidja" class="cat-sticker" style="left: 85%;" >
-    </div>
+      <img src="https://i.postimg.cc/6qbt1j5x/giphy.gif" alt="anes" class="cat-stickera" >
+      <img src="https://i.postimg.cc/KjfRcDG0/pixel-art-kitty.gif" alt="khadidja" class="cat-stickerk " >
+
+      
+      </div> 
     <div class="container">
         <div class="image-box">
             <img src="https://i.postimg.cc/GhW9FZvG/20241127-122639-min.jpg" alt="FIVE SEASONES" class="image active">
