--- a/intro.html
+++ b/intro.html
@@ -14,10 +14,15 @@
         <h1 class="batata" >INTRO</h1>
    </header>
  </header> 
- <div class="divider">
+ <div class="divider2">
     <div class="middle-section">
         <button onclick="window.location.href='memo-hub.html'" class="creative-button">next(:</button>
     </div>
+    <div class="lard3">
+        <img src="https://i.postimg.cc/6qbt1j5x/giphy.gif" alt="anes" class="cat-stickera" >
+        <img src="https://i.postimg.cc/KjfRcDG0/pixel-art-kitty.gif" alt="khadidja" class="cat-stickerk " >
+
+        </div> 
         
 </div>       
  <div class="star-stickers2">
@@ -51,7 +56,7 @@
     </div>
 </body>
  <footer class="footer1">
-    <h1 class="batata22" >the vid is private and plz set high quality</h1>
+    <h1 class="batata22" >it's privet, set high quality(:</h1>
     <p class="batata22">all right reserved 2025© lmao</p>
     <a class="batata22" href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
  </footer>
