--- a/memo-hub.html
+++ b/memo-hub.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       
-        <div class="lard">
+        <div class="lard1">
             <img src="https://i.postimg.cc/6qbt1j5x/giphy.gif" alt="anes" class="cat-stickera" >
             <img src="https://i.postimg.cc/KjfRcDG0/pixel-art-kitty.gif" alt="khadidja" class="cat-stickerk " >
 
