--- a/intro.html
+++ b/intro.html
@@ -36,6 +36,9 @@
     <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="star5." class="star-stickers star80">
     <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="star6." class="star-stickers star90">
     <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="star6." class="star-stickers star100">
+    <a href="dabdub.html">
+        <img src="https://i.postimg.cc/JzNrqn88/Clipped-image-20241224-162914.png" alt="Clickable Star" class="star-khadija clickable-khadija">
+      </a>
  </div>
 
  
