--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="menu-options">
             <a href="intro.html">Intro</a>
             <a href="memo-hub.html">Memories-hub</a>
-            <a href="https://www.youtube.com/embed/sNufvO2NGPI">">I love you(:</a>
+            <a href="https://www.youtube.com/embed/sNufvO2NGPI">I love you(:</a>
         </div>
     </div>
     <div class="lard">
