--- a/dabdub.html
+++ b/dabdub.html
@@ -197,7 +197,14 @@
         font-size: 0.9rem;
       }
     }
+    .im{ bottom: 10px;
+      font-family: 'Arial', sans-serif;
+    color: white;
+    text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000, 0 0 20px #ff4d4d, 0 0 30px #ff4d4d, 0 0 40px #ff4d4d, 0 0 50px #ff4d4d, 0 0 75px #ff4d4d; /* تأثير التوهج */
+    transition: text-shadow 0.3s ease-in-out; /* تأثير التوهج عند التحويم */
+    position: absolute;}
   </style>
+  
 </head>
 <body>
   <div class="menu-container">
@@ -252,4 +259,5 @@ function hideDialogue() {
     <button class="close-dialogue" onclick="hideDialogue()">×</button>
   </div>
 </body>
+<footer><a class="im" href="https://drive.google.com/file/d/1_bXpY2B_TC-aX9Dq8Fl3YSwVdUQYp1gy/view" target="_blank">temporary risala</a></footer>
 </html>
