--- a/dabdub.html
+++ b/dabdub.html
@@ -203,6 +203,13 @@
     text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000, 0 0 20px #ff4d4d, 0 0 30px #ff4d4d, 0 0 40px #ff4d4d, 0 0 50px #ff4d4d, 0 0 75px #ff4d4d; /* تأثير التوهج */
     transition: text-shadow 0.3s ease-in-out; /* تأثير التوهج عند التحويم */
     position: absolute;}
+    .im1{ bottom: 10px;
+      left: 25%;
+      font-family: 'Arial', sans-serif;
+    color: white;
+    text-shadow: 0 0 5px #d9ff00, 0 0 10px #6d8345, 0 0 15px #ff0000, 0 0 20px #ff4d4d, 0 0 30px #ff4d4d, 0 0 40px #ff4d4d, 0 0 50px #ff4d4d, 0 0 75px #98975b; /* تأثير التوهج */
+    transition: text-shadow 0.3s ease-in-out; /* تأثير التوهج عند التحويم */
+    position: absolute;}
   </style>
   
 </head>
@@ -260,4 +267,5 @@ function hideDialogue() {
   </div>
 </body>
 <footer><a class="im" href="https://drive.google.com/file/d/1_bXpY2B_TC-aX9Dq8Fl3YSwVdUQYp1gy/view" target="_blank">temporary risala</a></footer>
+<a class="im1" href=" https://music.youtube.com/playlist?list=PLYOE8qJIhLSlHU-ZeBY-8Aw97nj1tAq75&feature=shared" target="_blank">temporary risala2</a></footer>
 </html>
