--- a/dabdub.html
+++ b/dabdub.html
@@ -207,7 +207,7 @@
       left: 25%;
       font-family: 'Arial', sans-serif;
     color: white;
-    text-shadow: 0 0 5px #d9ff00, 0 0 10px #6d8345, 0 0 15px #ff0000, 0 0 20px #ff4d4d, 0 0 30px #ff4d4d, 0 0 40px #ff4d4d, 0 0 50px #ff4d4d, 0 0 75px #98975b; /* تأثير التوهج */
+    text-shadow: 0 0 5px #d9ff00, 0 0 10px #6d8345, 0 0 15px #58458d, 0 0 20px #ff4d4d, 0 0 30px #ff4d4d, 0 0 40px #ff4d4d, 0 0 50px #ff4d4d, 0 0 75px #98975b; /* تأثير التوهج */
     transition: text-shadow 0.3s ease-in-out; /* تأثير التوهج عند التحويم */
     position: absolute;}
   </style>
@@ -223,7 +223,7 @@
     </div>
   </div>
   <div class="container">
-    <img src="https://i.postimg.cc/5NK37jH0/Clipped-image-20250107-162455.png" alt="Teddy Bear" class="teddy">
+    <img src="https://i.postimg.cc/tJYy0vm8/Clipped-image-20250114-132101.png" alt="Teddy Bear" class="teddy">
     <div class="question">we're nixinormal?</div>
     <div class="buttons">
       <button class="btn btn-yes" onclick="alert('a7senti ro7ii chatura:b ❤')">ofc</button>
