--- a/dabdub.html
+++ b/dabdub.html
@@ -266,6 +266,6 @@ function hideDialogue() {
     <button class="close-dialogue" onclick="hideDialogue()">×</button>
   </div>
 </body>
-<footer><a class="im" href="https://drive.google.com/file/d/1_bXpY2B_TC-aX9Dq8Fl3YSwVdUQYp1gy/view" target="_blank">temporary risala</a></footer>
-<a class="im1" href=" https://music.youtube.com/playlist?list=PLYOE8qJIhLSlHU-ZeBY-8Aw97nj1tAq75&feature=shared" target="_blank">temporary risala2</a></footer>
+<footer>
+<a class="im" href=" https://music.youtube.com/playlist?list=PLYOE8qJIhLSlHU-ZeBY-8Aw97nj1tAq75&feature=shared" target="_blank">OUR PLAYLIST</a></footer>
 </html>
