--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="menu-options">
             <a href="intro.html">Intro</a>
             <a href="memo-hub.html">Memories-hub</a>
-            <a href="https://www.youtube.com/embed/sNufvO2NGPI">I love you(:</a>
+            <a href="https://www.youtube.com/embed/sNufvO2NGPI">">I love you(:</a>
         </div>
     </div>
     <div class="lard">
@@ -192,8 +192,8 @@
 
 </body>
 <footer><header class="waves"> <!-- ahh yalwehraniya-->
-  <h1 class="batata2" >we fi 3ech9ek rani ghare9 netnefes corage</h1></footer>
+  <h1 class="batata2" >ana mnek mnbrach~3ech9 s3ib we nar 9wiya</h1></footer>
   <p>all right reserved 2025© lmao</p>
-  <a href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
+  
 
 </html>
