--- a/memo-hub.html
+++ b/memo-hub.html
@@ -155,8 +155,8 @@ window.addEventListener('resize', createStars);
 </body>
    <footer class="footer1">
         <h1 class="batata22" >ntiya 3omri(:</h1>
-        <p class="batata22">all right reserved 2025© lmao</p>
-        <a class="batata22" href="https://linktr.ee/anes.18" target="_blank">contact meeee</a>
+        <p class="batata22">all right reserved 2025© lol</p>
+        
   
     </footer>
 
