--- a/VALENTAYNE.html
+++ b/VALENTAYNE.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>  <html lang="en">  
-<head>  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<head> <link rel="icon" href="favicon.ico" type="image/x-icon"> <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <title>MY Valentina</title>  
     <style>  
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');  
