--- a/valentine.html
+++ b/valentine.html
@@ -43,7 +43,9 @@
             font-family: 'Cairo', sans-serif;
             font-size: 22px;
             font-weight: 700;
-            background: linear-gradient(90deg, #ff8c00, #ff3e6b, #8b5cf6);
+            background: linear-gradient(90deg,#ffffff, #ffffff, #f7f7f7);
+;
+);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.3);
