--- a/index.html
+++ b/index.html
@@ -823,8 +823,8 @@
 </audio>
 <p>ana 3omrek, enti 3omori</p>
 <div class="button-container">
-    <a href="memo-hub.html" class="modern-button">Memo-Hub</a>
-    <a href="intro.html" class="modern-button">Intro-vid</a>
+    <a href="memo-hub.htmml" class="modern-button">Memo-Hub</a>
+    <a href="intro.htmml" class="modern-button">Intro-vid</a>
 </div>
 
 </div>
