--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         box-sizing: border-box;  
     }  
 
-    body {  /* well maybe u take a look hnaya but maknch any comment ro7i , n7ithum  but all kanu bli nbghiki */
+    body {  /* well.. maybe u take a look hnaya but maknch any comment ro7i , n7ithum  but all kanu bli nbghiki */
         background-color: rgb(9, 3, 37);  
         overflow: auto;  
         display: flex; 
