--- a/hub.html
+++ b/hub.html
@@ -804,7 +804,7 @@
         <div class="local-video-container">
             <!-- Poster image will show before video plays -->
             <video id="ourLoveVideo" class="romantic-video" poster="https://i.postimg.cc/5yqrR5yz/Blue-Gold-Stars-Elegant-Rehearsal-Dinner-Invitation-20250630-173242-0000.png" controls>
-                <source src="lv_0_20250630175011.mp4" type="video/mp4">
+                <source src="output(compress-video-online.com) (1).mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             
