--- a/3omri/khadija/index.html
+++ b/3omri/khadija/index.html
@@ -891,7 +891,7 @@
     </main>
 
    <!-- بهذا الكود الجديد -->
-<a href="../index.html" id="floating-moon" 
+<a href="/3omri" id="floating-moon" 
    style="position:fixed; bottom:30px; right:30px; font-size:3rem; cursor:pointer; z-index:100; animation:float 4s ease-in-out infinite; text-decoration:none; color:inherit;">
     🌕
 </a>
